--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=./Data/AppDB.db"
+    "DefaultConnection": "Data Source=.; Initial Catalog=Blazors; User Id=sa; Password=5432!qaz"
   },
   "Logging": {
     "LogLevel": {
