--- a/Client/wwwroot/manifest.json
+++ b/Client/wwwroot/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Client",
-  "short_name": "Client",
+  "name": "John Doe - ..Net Developer",
+  "short_name": "John Doe - ..Net Developer",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#ffffff",
